--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>My First Bitstarter</title>
+<title>AppGrokker</title>
 <link type="text/css" rel="stylesheet"
 	href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%Fbootstrap-2.3.2.css">
 <style type="text/css">
